integration_tests/codegen_fail/fail/interface/struct/attr_non_subtype_return.rs
use juniper::{graphql_interface, GraphQLObject};

#[derive(GraphQLObject)]
#[graphql(impl = CharacterValue)]
pub struct ObjA {
    id: Vec<String>,
}

#[graphql_interface(for = ObjA)]
struct Character {
    id: String,
}

fn main() {}
